--- a/src/css/index.css
+++ b/src/css/index.css
@@ -142,42 +142,14 @@
     display: flex;
   }
   
-  button, .controls {
-    background: linear-gradient(to bottom,#222,#666);
-  }
-  
   .player:hover .controls, .player:focus .controls {
     opacity: 1;
   }
   
-  button:before {
-    font-family: HeydingsControlsRegular;
-    font-size: 20px;
-    position: relative;
-    content: attr(data-icon);
-    color: #aaa;
-    text-shadow: 1px 1px 0px black;
-  }
   
   .play:before {
     font-size: 22px;
   }
-  
-  
-  button, .timer {
-    height: 38px;
-    line-height: 19px;
-    box-shadow: inset 0 -5px 25px rgba(0,0,0,0.3);
-    border-right: 1px solid #333;
-  }
-  
-  button {
-    position: relative;
-    border: 0;
-    flex: 1;
-    outline: none;
-  }
-  
   
   .timer {
     line-height: 38px;
@@ -205,14 +177,6 @@
     left: 19px;
   }
   
-  button:hover,button:focus {
-    box-shadow: inset 1px 1px 2px black;
-  }
-  
-  button:active {
-    box-shadow: inset 3px 3px 2px black;
-  }
-  
   .active:before {
     color: red;
   }
@@ -230,7 +194,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    background-color: #000;
+    /* background-color: #000; */
   }
   
   #show-img {
@@ -244,10 +208,6 @@
     position: absolute;
     left: 50%;
     transform: translatex(-50%);
-    background: #fff;
-    padding: 20px 40px;
-    border-radius: 50px;
-    border: none;
     z-index: 99999999;
     margin-top: 20px;
     outline: none;
