--- a/src/css/index.css
+++ b/src/css/index.css
@@ -63,6 +63,36 @@ body, html {
 nav li{
   font-family: 'Khand SemiBold';
 }
+nav a[type=button]:first-child span{
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+nav a[type=button]:first-child span::after{
+  content: '\266B';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+nav a[type=button]:first-child:hover span {
+  padding-right: 25px;
+}
+
+nav a[type=button]:first-child:hover span::after{
+  opacity: 1;
+  right: 0;
+}
+
+html .marquee img.secondimage{
+  filter: invert(90%) sepia(5%) saturate(790%) hue-rotate(202deg) brightness(110%) contrast(94%);
+}
+html.dark .marquee img.secondimage{
+  filter: none;
+}
+
 .spinner-border {
   display: inline-block;
   width: 2rem;
@@ -328,4 +358,44 @@ audio {
     -webkit-transform: translateX(-100%);
     transform: translateX(-100%);
   }
+}
+
+.draw-border {
+ 
+  transition: color 0.25s 0.0833333333s;
+  position: relative;
+}
+.draw-border::before, .draw-border::after {
+  border: 0 solid transparent;
+  box-sizing: border-box;
+  content: "";
+  pointer-events: none;
+  position: absolute;
+  width: 0;
+  height: 0;
+  bottom: 0;
+  right: 0;
+}
+.draw-border::before {
+  border-bottom-width: 2px;
+  border-left-width: 2px;
+}
+.draw-border::after {
+  border-top-width: 2px;
+  border-right-width: 2px;
+}
+.draw-border:hover {
+  color: #ea970c;
+}
+.draw-border:hover::before, .draw-border:hover::after {
+  border-color: #ea970c;
+  transition: border-color 0s, width 0.25s, height 0.25s;
+  width: 100%;
+  height: 100%;
+}
+.draw-border:hover::before {
+  transition-delay: 0s, 0s, 0.25s;
+}
+.draw-border:hover::after {
+  transition-delay: 0s, 0.25s, 0s;
 }
