--- a/src/css/index.css
+++ b/src/css/index.css
@@ -215,7 +215,10 @@ html.dark .marquee img.secondimage{
   width: auto;
   margin-top: 100px;
 }
-
+@media only screen and (max-width: 600px) {
+  #show-img {
+    height: auto;
+}
 #play {
   position: absolute;
   left: 50%;
